syntax = "proto3";
package badges;

import "gogoproto/gogo.proto";
import "badges/balances.proto";

// this line is used by starport scaffolding # proto/tx/import

option go_package = "github.com/bitbadges/bitbadgeschain/x/badges/types";

/* 
  An AddressMapping is a permanent list of addresses that are referenced by a mapping ID.
  The mapping may include only the specified addresses, or it may include all addresses but
  the specified addresses (depending on if includeAddresses is true (whitelist) or false (blacklist)).
  
  AddressMappings are used for things like whitelists, blacklists, approvals, etc.
*/
message AddressMapping {
  // Unique identifier for the address mapping.
  string mappingId = 1;
  
  // List of addresses included in the mapping.
  repeated string addresses = 2;
  
  // Indicates whether the mapping includes the specified addresses (true) or excludes them (false).
  bool includeAddresses = 3;
  
  // URI (Uniform Resource Identifier) associated with the address mapping to provide metadata, if applicable.
  string uri = 4;
  
  // Custom arbitrary data or additional information related to the address mapping.
  string customData = 5;
  
  // The user or entity who created the address mapping.
  string createdBy = 6;

  // The alias cosmos address for the mapping.
  string aliasAddress = 7;
}
